✨ add single http log endpoint
